--- a/src/index.html
+++ b/src/index.html
@@ -92,10 +92,104 @@
     </nav>
 
     <main>
-
+      <section class="page__section events" id="events">
+        <div class="container">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+          <div class="event">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-7">
+                <div class="event__picture-container">
+                  <img
+                    src="images/photo/picture_1.png"
+                    alt="picture 1"
+                    class="event__picture"
+                    >
+                </div>
+              </div>
+              <div class="event__container grid__item--9-12">
+                <div class="event__description">
+                  <div class="event__type">
+                    ВИСТАВКА
+                  </div>
+                  <div class="event__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+                <div class="event__name--container">
+                  <div class="event__name">
+                    Йду і повертаюсь
+                  </div>
+                </div>
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-7">
+                <div class="event__picture-container">
+                  <img
+                    src="images/photo/picture_2.png"
+                    alt="picture 2"
+                    class="event__picture"
+                    >
+                </div>
+              </div>
+              <div class="event__container grid__item--9-12">
+                <div class="event__description">
+                  <div class="event__type">
+                    ВИСТАВКА
+                  </div>
+                  <div class="event__date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+                <div class="event__name--container">
+                  <div class="event__name event__name--after">
+                    І спогади і мрії
+                  </div>
+                </div>
+                <p class="event__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="grid--desktop special-event">
+            <div class="special-event__picture-container">
+              <img
+                class="special-event__picture"
+                src="images/photo/picture_3.png"
+                alt="picture 3"
+              >
+            </div>
+          </div>
+          <div class="special-event__deskription">
+            <div class="special-event__text-container">
+              <div class="special-event__wrapper">
+                <div class="special-event__type">
+                  ЛЕКЦІЯ
+                </div>
+                <div class="special-event__date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+              <div class="special-event__name">
+                Від класицизму до романтизму
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
     </main>
 
-
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
