--- a/src/index.html
+++ b/src/index.html
@@ -51,73 +51,296 @@
     </nav>
 
     <main>
-      <section class="page__section page__section--first" id="current-events">
-        <div class="container">
-          <div class="current-events__content">
-            <div class="current-events__title">
-              <p class="current-events__text">Актуальні події</p>
+      <section class="page__section" id="events">
+        <div class="events__container container">
+          <h2 class="events__title">Актуальні події</h2>
 
-              <div class="current-events__image">
+          <div class="events__item event">
+
+            <div class="event__wrapper event__wrapper--first">
+              <div class="event__photo event__photo--first">
                 <img
-                  class="current-events__image-pic"
+                  class="event__img"
                   src="/images/current-events.jpg"
                   alt="current-events">
               </div>
 
-              <div class="current-events__description">
+              <div class="event__info event__info--first">
 
-                <div class="current-events__date">
-                  <p class="current-events__text-grey">виставка</p>
-                  <p class="current-events__text-date">26.08-29.11.2019</p>
+                <div class="event__box">
+                  <p class="event__type">виставка</p>
+                  <p class="event__date">26.08-29.11.2019</p>
                 </div>
 
-                <div class="current-events__title">Йду i повертаюсь</div>
-
-                <div class="current-events__text-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    Йду i повертаюсь
+                  </a>
+                </h3>
+                <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
             </div>
 
-            <div class="current-events__image">
-              <img
-                class="current-events__image-pic"
-                src="/images/current-events2.jpg"
-                alt="current-events">
-            </div>
-
-            <div class="current-events__description">
-
-              <div class="current-events__date">
-                <p class="current-events__text-grey">виставка</p>
-                <p class="current-events__text-date">26.08-29.11.2019</p>
-              </div>
-
-              <div class="current-events__title">I спогади i мрії</div>
-
-              <div class="current-events__text-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».</div>
-            </div>
-
-            <div class="current-events__bottom">
-
-              <div class="current-events__bottom--image">
+            <div class="event__wrapper event__wrapper--second">
+              <div class="event__photo event__photo--second">
                 <img
-                  class="current-events__bottom--image-pic"
-                  src="/images/bottom.jpg"
+                  class="event__img"
+                  src="/images/current-events2.jpg"
                   alt="current-events">
               </div>
 
-              <div class="current-events current-events__bottom">
-                <div class="current-events__frameB">
-                  <p class="current-events__frame-textB">лекція</p>
-                  <p class="current-events__frame-dateB">26/08/2019 - 11:00</p>
+              <div class="event__info event__info--second">
+
+                <div class="event__box">
+                  <p class="event__type">виставка</p>
+                  <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <div class="current-events__titleB">Від класицизму до романтизму</div>
+
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    I спогади i мрії
+                  </a>
+                </h3>
+                <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+
+
+            <div class="events__item events__item--bottom">
+
+              <div class="event__bottom-image events__photo--bottom">
+
+                <div class="event__info event__info--bottom">
+                  <div class="event__box event__box--bottom">
+                    <p class="event__type">лекція</p>
+                    <p class="event__date">26/08/2019 - 11:00</p>
+                  </div>
+                  <h3 class="event__frame-title">
+                    <a hhref="#" class="event__link">
+                      Від класицизму до романтизму
+                    </a>
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
 
+      <section class="page__gallery gallery" id="Gallery">
+        <p class="gallery__title">Галерея</p>
+
+        <div class="gallery__first">
+          <img
+          class="gallery__image"
+          src="/images/gallery1.jpg"
+          alt="gallery">
+
+          <img
+          class="gallery__image"
+          src="/images/gallery2.jpg"
+          alt="gallery">
+        </div>
+
+        <div class="gallery__second">
+          <img
+          class="gallery__image"
+          src="/images/gallery3.jpg"
+          alt="gallery">
+
+          <img
+          class="gallery__image"
+          src="/images/gallery4.jpg"
+          alt="gallery">
+        </div>
+      </section>
+
+      <section class="page__section" id="gallery">
+        <div class="container">
+
+          <div class="swiper">
+            <p class="gallery__title">Галерея</p>
+
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                class="swiper__img"
+                src="/images/gallery1.jpg"
+                alt="gallery">
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                class="swiper__img"
+                src="/images/gallery2.jpg"
+                alt="gallery">
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                class="swiper__img"
+                src="/images/gallery3.jpg"
+                alt="gallery">
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                class="swiper__img"
+                src="/images/gallery4.jpg"
+                alt="gallery">
+              </div>
+
+              <div class="swiper-scrollbar"></div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+
+
+    <div class="sub">
+      <div class="subscription" id="subscription">
+        <div class="subscription__picture"></div>
+        <p class="subscription__title">Підписка</p>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <div class="subscription__input">
+          <form action="/" class="subscription__form">
+            <input
+              class="subscription__email"
+              type="text"
+              name="text"
+              id="email"
+              placeholder="E-mail"
+            >
+            <button type="submit" class="subscription__icon">
+              <img
+                class="subscription__icon-pic"
+                src="/images/icons/go.svg"
+                alt="go">
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer">
+        <div class="footer__container container">
+          <div class="footer__information">
+            <div class="footer__top">
+
+              <a href="/" class="footer__logo">
+                <img
+                  class="logo__img"
+                  src="/images/icons/NA MU.svg"
+                  alt="logo">
+              </a>
+
+              <div class="footer__media media">
+                <ul class="media__list">
+                  <li class="media__item">
+                    <a
+                    class="media__link"
+                    href="https://www.facebook.com/namu.museum/photos/"
+                  >
+                      <img
+                        class="media__img"
+                        src="/images/icons/Facebook.svg"
+                        alt="facebook"
+                      >
+                    </a>
+                  </li>
+
+                  <li class="media__item">
+                    <a
+                    class="media__link"
+                    href="https://www.instagram.com/namu.museum/"
+                  >
+                      <img
+                        class="media__img"
+                        src="/images/icons/inst.svg"
+                        alt="instagram">
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+
+            <div class="footer__wrapper">
+              <div class="footer__info info">
+                <div class="info__box">
+                  <h3 class="info__title">Графік роботи:</h3>
+                  <div class="info__text info__text--time">
+                    <p><span class="info__time">12:00 — 20:00</span> середа</p>
+                    <p><span class="info__time">12:00 — 20:00</span> четвер</p>
+                    <p><span class="info__time">12:00 — 20:00</span> п'ятниця</p>
+                    <p><span class="info__time">11:00 — 19:00</span> субота</p>
+                    <p><span class="info__time">11:00 — 19:00</span> неділя</p>
+                  </div>
+
+                  <div class="info__text">
+                    <h2 class="info__title"></h2>
+                    <p>Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+                  </div>
+                </div>
+                <div class="info__box">
+                  <h3 class="info__title" id="contact">Контакти:</h3>
+                  <div class="info__text">
+                    <a
+                      class="info__link"
+                      href="https://2gis.ua/ru/kyiv/firm/70000001020662858"
+                      target="_blank"
+                    >
+                    вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                    <a class="info__link" href="+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+                    <a class="info__link" href="+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+                    <a class="info__link" href="e-mail: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer__button">
+                <a href="/" class="footer__buttonPic">
+                  <img
+                    class="footer__button-img"
+                    src="/images/icons/footerbutton.svg"
+                    alt="up">
+                </a>
+              </div>
+
+              <div class="footer__info info">
+
+                <ul class="info__list">
+                  <li class="info__item">
+                    <a href="#gallery" class="info__link">Галерея</a>
+                  </li>
+                  <li class="info__item">
+                    <a href="/" class="info__link">Виставки та події</a>
+                  </li>
+                </ul>
+
+                <ul class="info__list">
+                  <li class="info__item">
+                    <a href="/" class="info__link">Про Нас </a>
+                  </li>
+                  <li class="info__item">
+                    <a href="/" class="info__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__copyright copiright">
+            <p class="copiright__name">Designed by Zhyriada Marina</p>
+            <p class="copiright__name">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
