--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,108 +16,152 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__menu">
-        <a href="/">
-          <img src="./images/Vector.png" alt="header__menu-opener">
-        </a>
-        <div class="header__menu-logo">
-          <a href="#">
-            <img src="./images/NA MU.png" alt="logo">
+      <div class="container">
+        <div class="header__menu">
+          <a href="/" class="header__menu-opener">
+            <img
+              src="./images/Vector.png"
+              alt="header__menu-opener">
           </a>
+          <div class="header__menu-logo">
+            <a href="#">
+              <img src="./images/NA MU.png" alt="logo">
+            </a>
+          </div>
         </div>
+
       </div>
-      <h2 class="header__title">
-        ХУДОЖНІЙ
-        <br>
-        МУЗЕЙ
-      </h2>
-      <div class="header__button">
-        <div class="header__button-item">
-          кивтки
-        </div>
-        <a href="#" class="header__button-search">
-          >
-        </a>
-      </div>
+
     </header>
 
     <main>
-      <section class="page__section page__section-exhibition">
-        <h2 class="page__section-title">
-          Актуальні
-          <br>
-          події
-        </h2>
-        <div class="page__section-painting">
-          <img src="./images/painting1.png" alt="painting_nature">
+      <div class="hero">
+        <div class="grid">
+          <div class="grid__item grid__item--desktop-1-5">
+            <h2 class="hero__title">
+              ХУДОЖНІЙ
+              <br>
+              МУЗЕЙ
+            </h2>
+            <div class="hero__button">
+              <div class="hero__button-item">
+                кивтки
+              </div>
+              <a href="#" class="hero__button-search">
+                >
+              </a>
+            </div>
+          </div>
+          <div class="grid__item grid__item--desktop-6-12">
+            <img
+              src="./images/background.png"
+              alt="backg"
+              class="hero__background">
+          </div>
         </div>
-        <div class="page__section-description">
-          ВИСТАВКА
-        </div>
-        <div class="page__section-date">
-          26.08-29.11.2019
-        </div>
-        <div class="page__section-name">
-          Йду i повертаюсь
-          <img src="./images/orange.png" alt="ornge_square">
-        </div>
-        <div class="page__section-content">
-          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-        </div>
+      </div>
 
-        <div class="page__section-painting">
-          <img src="./images/painting2.png" alt="painting_girl">
-        </div>
-        <div class="page__section-description">
-          ВИСТАВКА
-        </div>
-        <div class="page__section-date">
-          26.08-29.11.2019
-        </div>
-        <div class="page__section-name">
-          I спогади i мрії
-          <img src="./images/orange.png" alt="ornge_square">
-        </div>
-        <div class="page__section-content">
-          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+      <section class="page__section page__section-exhibition">
+        <div class="grid">
+          <div class="grid__item grid__item--1-4">
+            <h2 class="page__section-title" id="exhibition">
+              Актуальні
+              <br>
+              події
+            </h2>
+          </div>
+          <div class="grid__item grid__item--1-7">
+            <img src="./images/painting1.png" alt="painting_nature"
+              class="page__section-painting">
+          </div>
+          <div class="grid__item grid__item--9-12">
+            <div class="page__section-description">
+              ВИСТАВКА
+            </div>
+            <div class="page__section-date">
+              26.08-29.11.2019
+            </div>
+            <div class="page__section-name">
+              Йду i повертаюсь
+              <img src="./images/orange.png" alt="ornge_square">
+            </div>
+            <div class="page__section-content">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--1-7">
+            <img
+              src="./images/painting2.png"
+              alt="painting_girl"
+              class="page__section-painting">
+          </div>
+          <div class="grid__item grid__item--9-12">
+            <div class="page__section-description">
+              ВИСТАВКА
+            </div>
+            <div class="page__section-date">
+              26.08-29.11.2019
+            </div>
+            <div class="page__section-name">
+              I спогади i мрії
+              <img src="./images/orange.png" alt="ornge_square">
+            </div>
+            <div class="page__section-content">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+            </div>
+          </div>
         </div>
       </section>
+
       <section class="page__section page__section-lection">
-        <img
-          src="./images/classicism.png"
-          alt="sunset"
-          class="page__section-sunset">
-        <div class="page__section-announcement">
-          <div class="page__section-description">
-            ЛЕКЦІЯ
+        <div class="grid">
+          <div class="grid__item grid__item--4-9">
+            <div class="page__section-announcement">
+              <div class="page__section-description">
+                ЛЕКЦІЯ
+              </div>
+              <div class="page__section-date">26/08/2019 - 11:00</div>
+              <h2  class="page__section-name">
+                Від класицизму до
+                <br>
+                романтизму
+              </h2>
+            </div>
           </div>
-          <div class="page__section-date">26/08/2019 - 11:00</div>
-          <h2  class="page__section-name">
-            Від класицизму до
-            <br>
-            романтизму
-          </h2>
         </div>
       </section>
 
       <section class="page__section page__section-gallery">
-        <h2 class="page__section-title">
+        <h2 class="page__section-title" id="gallery">
           Галерея
         </h2>
 
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="./images/swipe1.png" alt="girl">
+              <img
+                src="./images/swipe1.png"
+                alt="girl"
+                class="swiper-picture">
             </div>
             <div class="swiper-slide">
-              <img src="./images/swipe2.png" alt="village">
+              <img
+                src="./images/swipe2.png"
+                alt="village"
+                class="swiper-picture">
             </div>
             <div class="swiper-slide">
-              <img src="./images/swipe3.png" alt="park">
+              <img
+                src="./images/swipe3.png"
+                alt="park"
+                class="swiper-picture">
             </div>
             <div class="swiper-slide">
-              <img src="./images/swipe4.png" alt="sea">
+              <img
+                src="./images/swipe4.png"
+                alt="sea"
+                class="swiper-picture">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -134,106 +178,149 @@
           <br>
           подій та останніх новин.
         </div>
-        <div class="subscribe__button">
-          <label
-            for="email">
-          </label>
-          <input
-            type="email"
-            placeholder="E-mail"
-            name="email"
-            class="subscribe__button-text">
-          <a class="subscribe__button-search">></a>
+        <div class="grid__item grid__item--4-9">
+          <div class="subscribe__button">
+            <label
+              for="email">
+            </label>
+            <input
+              type="email"
+              placeholder="E-mail"
+              name="email"
+              class="subscribe__button-text">
+            <a class="subscribe__button-search">></a>
+          </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__logo">
-        <img src="./images/logo_footer.png" alt="logo">
-        <div class="footer__logo-links">
-          <a href="https://www.facebook.com/namu.museum/">
-            <img
-              src="./images/Facebook.png"
-              alt="facebook_link"
-              class="footer__logo-link">
-          </a>
-          <a href="https://www.instagram.com/namu.museum/">
-            <img
-              src="./images/insta.png"
-              alt="instagram_link"
-              class="footer__logo-link">
-          </a>
-        </div>
-      </div>
-      <div class="footer_schedule">
-        <div class="footer_schedule-times">
-          <h3>Графік роботи</h3>
-          <div>
-            <div>
-              12:00 — 20:00
-            </div>
-            <div>
-              середа
-            </div>
-            <div>
-              12:00 — 20:00
-            </div>
-            <div>
-              четвер
-            </div>
-            <div>
-              12:00 — 20:00
-            </div>
-            <div>
-              п’ятниця
-            </div>
-            <div>
-              11:00 — 19:00
-            </div>
-            <div>
-              субота
-            </div>
-            <div>
-              11:00 — 19:00
-            </div>
-            <div>
-              неділя
-            </div>
-            <div>
-              Вихідні понеділок, вівторок
-              <br>
-              Kaca припиняє роботу за 1 годину
-              <br>
-              до закриття музею
+      <div class="grid">
+        <div class="grid__item grid__item--1">
+          <div class="footer__logo">
+            <img src="./images/logo_footer.png" alt="logo">
+            <div class="footer__logo-links">
+              <a href="https://www.facebook.com/namu.museum/">
+                <img
+                  src="./images/Facebook.png"
+                  alt="facebook_link"
+                  class="footer__logo-link">
+              </a>
+              <a href="https://www.instagram.com/namu.museum/">
+                <img
+                  src="./images/insta.png"
+                  alt="instagram_link"
+                  class="footer__logo-link">
+              </a>
             </div>
           </div>
         </div>
-
-        <div class="footer__schedule-contacts">
-          <h3>Контакти:</h3>
-          <div>
-            <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
-              вул. M. Грушевського, 6; Київ, 01001
-            </a>
-            <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
-              тел. +38 (044) 278-13-57
-            </a>
-            <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
-              факс +38 (044) 278-74-54
-            </a>
-            <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
-              e-mail: info@namu.kiev.ua
-            </a>
+        <div class="grid__item grid__item--3-4">
+          <div class="footer_schedule">
+            <div class="footer_schedule-times">
+              <h3>Графік роботи</h3>
+              <div>
+                <div>
+                  12:00 — 20:00
+                </div>
+                <div>
+                  середа
+                </div>
+                <div>
+                  12:00 — 20:00
+                </div>
+                <div>
+                  четвер
+                </div>
+                <div>
+                  12:00 — 20:00
+                </div>
+                <div>
+                  п’ятниця
+                </div>
+                <div>
+                  11:00 — 19:00
+                </div>
+                <div>
+                  субота
+                </div>
+                <div>
+                  11:00 — 19:00
+                </div>
+                <div>
+                  неділя
+                </div>
+                <div>
+                  Вихідні понеділок, вівторок
+                  <br>
+                  Kaca припиняє роботу за 1 годину
+                  <br>
+                  до закриття музею
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <a href="#">
+        <div class="grid__item grid__item--5-6">
+          <div class="footer__schedule-contacts">
+            <h3>Контакти:</h3>
+            <div>
+              <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
+                вул. M. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
+                факс +38 (044) 278-74-54
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+        </div>
+        <div>
           <img
-          src="./images/Ellipse 4.png"
-          alt="go_to_the_top"
-          class="footer__return">
-        </a>
+            src="./images/footer_line_hor.png"
+            alt="line"
+            class="footer__line-desktop">
+        </div>
+        <div>
+          <img
+            src="./images/footer_line_ver.png"
+            alt="line"
+            class="footer__line-mobile">
+        </div>
+        <div>
+          <a href="#">
+            <img
+            src="./images/Ellipse.png"
+            alt="go_to_the_top"
+            class="footer__return">
+          </a>
+        </div>
+        <div class="grid__item grid__item--8-10">
+          <div class="footer__links">
+            <div>
+              <a href="#gallery" class="footer__link">
+                Галерея
+              </a>
+            </div>
+            <div>
+              <a href="#" class="footer__link">
+                Про Hac
+              </a>
+            </div>
+            <div>
+              <a href="#exhibition" class="footer__link">
+                Виставки та події
+              </a>
+            </div>
+            <div class="footer__link">
+              Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-->
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
